# robot_sim_engine

./: .gitignore
robot_sim_engine/: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  noxfile.py  pyproject.toml  robot_sim_cli.py  setup.py
robot_sim_engine/.github/workflows/: ci.yml
robot_sim_engine/configs/: app.yaml  benchmark_matrix.yaml  collision_fidelity.yaml  compatibility_budget.yaml  compatibility_downstream_inventory.yaml  compatibility_retirement.yaml  coverage_partitions.yaml  perf_budgets.yaml  plugins.yaml  release_environment.yaml  solver.yaml
robot_sim_engine/configs/profiles/: ci.yaml  default.yaml  dev.yaml  gui.yaml  release.yaml  research.plugins.yaml  research.yaml
robot_sim_engine/configs/robots/: mini.yaml  planar_2dof.yaml  smoke_robot.yaml  smoke_saved_robot.yaml
robot_sim_engine/docs/: architecture.md  benchmark_suite.md  capability_matrix.md  compatibility_downstream_inventory.md  compatibility_matrix.md  compatibility_support_boundary.md  error_taxonomy.md  exception_catch_matrix.md  export_formats.md  external_code_intake_policy.md  importer_fidelity.md  index.md  kinematics_conventions.md  module_status.md  packaging.md  planning_scene.md  plugin_development.md  quality_evidence.md  quality_gates.md  roadmap.md  schema_versions.md  stable_surface_migration.md  task_event_schema.md  task_threading_model.md  technical_debt_register.md  test_plan.md  trajectory_semantics.md  v7_blueprint.md
robot_sim_engine/docs/architecture/: execution-model.md  importer-model.md  overview.md  planning-scene.md  render-runtime.md
robot_sim_engine/docs/getting-started/: quickstart.md  repository-layout.md
robot_sim_engine/docs/governance/: compatibility-policy.md  documentation-governance.md  external-code-intake-policy.md  roadmap.md  technical-debt.md
robot_sim_engine/docs/guides/: configuration-profiles.md  export-and-session.md  packaging-and-release.md  plugin-development.md  testing-and-quality.md
robot_sim_engine/docs/reference/: benchmark-suite.md  generated-contracts.md  kinematics-and-trajectory.md  schema-and-contracts.md
robot_sim_engine/examples/: headless_export_session_with_scene.yaml  headless_plan_request.yaml  headless_plan_request_with_scene.yaml  headless_validate_request_with_scene.yaml
robot_sim_engine/examples/plugins/: minimal_importer_plugin.py  minimal_planner_plugin.py  minimal_solver_plugin.py
robot_sim_engine/robot_sim/: __init__.py
robot_sim_engine/scripts/: build_local_quality_evidence_bundle.py  collect_quality_evidence.py  package_release.py  regenerate_importer_fidelity_baseline.py  regenerate_quality_contracts.py  regenerate_scene_capture_baseline.py  run_tests.py  sync_packaged_configs.py  verify_benchmark_matrix.py  verify_compatibility_budget.py  verify_compatibility_retirement.py  verify_docs_information_architecture.py  verify_gate_layer.py  verify_governance_gate_layer.py  verify_gui_smoke.py  verify_module_governance.py  verify_partition_coverage.py  verify_perf_budget_config.py  verify_quick_quality.py  verify_release_blockers.py  verify_release_environment.py  verify_runtime_baseline.py  verify_runtime_contracts.py  verify_runtime_gate_layer.py
robot_sim_engine/src/robot_sim/: README_PATCH_NOTES.txt
robot_sim_engine/src/robot_sim_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
robot_sim_engine/tests/: conftest.py  test_release_package.py
robot_sim_engine/tests/regression/: conftest.py  (+13 more)
(+451 files in other folders)
