[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-sim-engine"
version = "0.1.0"
description = "Pure-math robotic arm kinematics and trajectory planning simulator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.5",
  "pyqtgraph>=0.13",
  "pyvista>=0.43",
  "pyvistaqt>=0.11",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
